// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="gf-form-inline cta-form"
>
  <button
    className="cta-form__close btn btn-transparent"
    onClick={[MockFunction]}
  >
    <i
      className="fa fa-close"
    />
  </button>
  <form
    name="addPermission"
    onSubmit={[Function]}
  >
    <h5>
      Add Permission For
    </h5>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <select
          className="gf-form-input gf-size-auto"
          onChange={[Function]}
          value="Team"
        >
          <option
            key="0"
            value="Team"
          >
            Team
          </option>
          <option
            key="1"
            value="User"
          >
            User
          </option>
        </select>
      </div>
      <div
        className="gf-form"
      >
        <TeamPicker
          className="width-20"
          onSelected={[Function]}
        />
      </div>
      <div
        className="gf-form"
      >
        <DescriptionPicker
          className="gf-form-input--form-dropdown-right"
          disabled={false}
          onSelected={[Function]}
          optionsWithDesc={
            Array [
              Object {
                "description": "Can query data source.",
                "label": "Query",
                "value": 1,
              },
            ]
          }
        />
      </div>
      <div
        className="gf-form"
      >
        <button
          className="btn btn-success"
          data-save-permission={true}
          disabled={true}
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Render should render user picker 1`] = `
<div
  className="gf-form-inline cta-form"
>
  <button
    className="cta-form__close btn btn-transparent"
    onClick={[MockFunction]}
  >
    <i
      className="fa fa-close"
    />
  </button>
  <form
    name="addPermission"
    onSubmit={[Function]}
  >
    <h5>
      Add Permission For
    </h5>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <select
          className="gf-form-input gf-size-auto"
          onChange={[Function]}
          value="User"
        >
          <option
            key="0"
            value="Team"
          >
            Team
          </option>
          <option
            key="1"
            value="User"
          >
            User
          </option>
        </select>
      </div>
      <div
        className="gf-form"
      >
        <UserPicker
          className="width-20"
          onSelected={[Function]}
        />
      </div>
      <div
        className="gf-form"
      >
        <DescriptionPicker
          className="gf-form-input--form-dropdown-right"
          disabled={false}
          onSelected={[Function]}
          optionsWithDesc={
            Array [
              Object {
                "description": "Can query data source.",
                "label": "Query",
                "value": 1,
              },
            ]
          }
        />
      </div>
      <div
        className="gf-form"
      >
        <button
          className="btn btn-success"
          data-save-permission={true}
          disabled={true}
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</div>
`;
